adding notes from 260213 F as well as simulations of the electric field from an accelerating charge

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,6 +7,17 @@
    "source": [
     "# Spring 2026 Daily Log\n",
     "\n",
+    "## day 13 | 260211 W\n",
+    "\n",
+    "\n",
+    "\n",
+    "## day 12 | 260208 M\n",
+    "\n",
+    "\n",
+    "\n",
+    "## day 11 | 260206 F\n",
+    "\n",
+    "As a precursor to chapter 2, I wanted to work through a few issues in order to remind you of what we mean by several quantities that are used in the description of *harmonic waves*. These harmonic waves are given by a *sine* or *cosine* function with the wave-like *x-vt* portion plugged in. \n",
     "\n",
     "## day 10 | 260204 W\n",
     "\n",
