--- a/README.ipynb
+++ b/README.ipynb
@@ -7,9 +7,48 @@
    "source": [
     "# Spring 2026 Daily Log\n",
     "\n",
+    "## day 14 | 260213 F\n",
+    "\n",
+    "We want to look at the origin of light and see how that affects when light enters a material. So, what is light?\n",
+    "\n",
     "## day 13 | 260211 W\n",
     "\n",
+    "We went through light from a beginner's perspective. I essentially gave the same lecture that I would for 102 or 204, but along the way we noticed some questions that were not well answered by this perspective. I'll list some of the questions that we came up with at the end.\n",
     "\n",
+    "So light is a wave of the electromagnetic spectrum. Light has a wavelength and a period (or frequency) that we have discussed already. The wavelength is the repetition in space and the period is the repetition in time. Other parameters such as angular frequency or wave vector come from these factors, but the factors are not independent from each other. The speed of a wave, v, relates these two quantities in that \n",
+    "\n",
+    "$$v=\\frac{\\lambda}{T}$$\n",
+    "\n",
+    "Just to finish this set of relationships out, the speed of light **in vacuum** is **c** and that value is given by two other important factors and that is the permittivity and permeability of free space, $\\epsilon_0$ and $\\mu_0$. \n",
+    "\n",
+    "The speed of light through a material slows down. This slow down is given by the *index of refraction* of the material and this relationship looks like this:\n",
+    "\n",
+    "$$\\frac{c}{v}=n$$\n",
+    "\n",
+    "Some common values for the index of refraction are vacuum, air, water, and glass. These values are experimentally derived. \n",
+    "\n",
+    "One last consequence of this is that since the speed of light in matter is slower, a question that arises is, \"Does the wavelength or the frequency get smaller or both?\" The answer is the wavelength gets smaller, not the frequency. So the wavelength in a material would be related to the wavelength in vacuum like this:\n",
+    "\n",
+    "$$\\lambda = \\frac{\\lambda_{\\mathrm{vac}}{n}$$\n",
+    "\n",
+    "Snell's Law is another law that relates the angle of light as it goes from one material into another material. This light acts like a tank as it is crossing this boundary and changes direction slightly as a result of the speed being different in the two materials. Snell's Law looks like:\n",
+    "\n",
+    "$$n_i \\sin(\\theta_i) = n_t \\sin(\\theta_t)$$\n",
+    "\n",
+    "Law of reflection is that light bounces off at the same angle as it comes in so that \n",
+    "\n",
+    "$$\\theta_i = \\theta_r$$\n",
+    "\n",
+    "Now throughout this lecture we were asking questions all along the way whenever this explanation felt like it was lacking. Some of the questions that we noted are these:\n",
+    "1. What is light?\n",
+    "2. Where does light come from?\n",
+    "3. Can the speed of light change?\n",
+    "4. What affects the brightness of light?\n",
+    "5. How do humans perceive brightness and color\n",
+    "6. Why does light slow down in a material\n",
+    "7. What is reflection?\n",
+    "\n",
+    "These are all good questions and ones that we hope to answer in a satisfactory way over the course of the next few lectures.\n",
     "\n",
     "## day 12 | 260208 M\n",
     "\n",
