--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1799,8 +1799,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "b9960d4d-3667-4cf2-81f9-fb7e8312e0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.18.1</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m18.1\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[02/13/26 13:57:45] </span><span style=\"color: #008000; text-decoration-color: #008000\">INFO    </span> Caching disabled.                                                 <a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/renderer/cairo_renderer.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">cairo_renderer.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/renderer/cairo_renderer.py#78\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">78</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[02/13/26 13:57:45]\u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Caching disabled.                                                 \u001b]8;id=180619;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/renderer/cairo_renderer.py\u001b\\\u001b[2mcairo_renderer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=812761;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/renderer/cairo_renderer.py#78\u001b\\\u001b[2m78\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[02/13/26 13:59:26] </span><span style=\"color: #008000; text-decoration-color: #008000\">INFO    </span> Animation <span style=\"color: #008000; text-decoration-color: #008000\">0</span> : Partial movie file written in                   <a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">scene_file_writer.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#527\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">527</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #008000; text-decoration-color: #008000\">'/home/ehreming/Dropbox/340-2026-spring/media/videos/340-2026</span> <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #008000; text-decoration-color: #008000\">-spring/480p15/partial_movie_files/SheetOfChargesPlaneWaveVec</span> <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #008000; text-decoration-color: #008000\">tors_Zpol/uncached_00000.mp4'</span>                                 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[02/13/26 13:59:26]\u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Animation \u001b[32m0\u001b[0m : Partial movie file written in                   \u001b]8;id=813284;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=87315;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#527\u001b\\\u001b[2m527\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[32m'/home/ehreming/Dropbox/340-2026-spring/media/videos/340-2026\u001b[0m \u001b[2m                        \u001b[0m\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[32m-spring/480p15/partial_movie_files/SheetOfChargesPlaneWaveVec\u001b[0m \u001b[2m                        \u001b[0m\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[32mtors_Zpol/uncached_00000.mp4'\u001b[0m                                 \u001b[2m                        \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span><span style=\"color: #008000; text-decoration-color: #008000\">INFO    </span> Combining to Movie file.                                      <a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">scene_file_writer.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#617\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">617</span></a>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m Combining to Movie file.                                      \u001b]8;id=493330;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=58284;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#617\u001b\\\u001b[2m617\u001b[0m\u001b]8;;\u001b\\\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span><span style=\"color: #008000; text-decoration-color: #008000\">INFO    </span>                                                               <a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">scene_file_writer.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#737\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">737</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">File</span> ready at                                                 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #008000; text-decoration-color: #008000\">'/home/ehreming/Dropbox/340-2026-spring/media/videos/340-2026</span> <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #008000; text-decoration-color: #008000\">-spring/480p15/SheetOfChargesPlaneWaveVectors_Zpol.mp4'</span>       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>                                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                        </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m                                                               \u001b]8;id=599190;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py\u001b\\\u001b[2mscene_file_writer.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=866559;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene_file_writer.py#737\u001b\\\u001b[2m737\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[1;33mFile\u001b[0m ready at                                                 \u001b[2m                        \u001b[0m\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[32m'/home/ehreming/Dropbox/340-2026-spring/media/videos/340-2026\u001b[0m \u001b[2m                        \u001b[0m\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[32m-spring/480p15/SheetOfChargesPlaneWaveVectors_Zpol.mp4'\u001b[0m       \u001b[2m                        \u001b[0m\n",
+       "\u001b[2;36m                    \u001b[0m                                                                       \u001b[2m                        \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span><span style=\"color: #008000; text-decoration-color: #008000\">INFO    </span> <span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">Rendered</span> SheetOfChargesPlaneWaveVectors_Zpol                              <a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">scene.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene.py#247\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">247</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         <span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">Played</span> <span style=\"color: #008000; text-decoration-color: #008000\">1</span> <span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">animations</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">            </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[32mINFO    \u001b[0m \u001b[1;33mRendered\u001b[0m SheetOfChargesPlaneWaveVectors_Zpol                              \u001b]8;id=842414;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene.py\u001b\\\u001b[2mscene.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=439709;file:///home/ehreming/anaconda3/lib/python3.12/site-packages/manim/scene/scene.py#247\u001b\\\u001b[2m247\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         \u001b[1;33mPlayed\u001b[0m \u001b[32m1\u001b[0m \u001b[1;33manimations\u001b[0m                                                       \u001b[2m            \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/SheetOfChargesPlaneWaveVectors_Zpol@2026-02-13@13-59-26.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -ql --disable_caching SheetOfChargesPlaneWaveVectors_Zpol\n",
+    "\n",
+    "class SheetOfChargesPlaneWaveVectors_Zpol(ThreeDScene):\n",
+    "    def construct(self):\n",
+    "        self.set_camera_orientation(phi=70*DEGREES, theta=-50*DEGREES)\n",
+    "\n",
+    "        omega = 2.2\n",
+    "        k = 1.2\n",
+    "        A_sheet = 0.45\n",
+    "        A_E = 1.0\n",
+    "        t = ValueTracker(0.0)\n",
+    "        # a remington added dot #\n",
+    "\n",
+    "        # static red test point at (5, 0, 0)\n",
+    "        test_dot = Dot3D(\n",
+    "            point=np.array([0.0, 0.0, 5.0]),\n",
+    "            radius=0.12,\n",
+    "            color=RED\n",
+    "        )\n",
+    "        # ---------- sheet of dot charges (x=0), oscillate \"up/down\" in z ----------\n",
+    "        y_vals = np.linspace(-2.4, 2.4, 9)\n",
+    "        z_vals = np.linspace(-2.4, 2.4, 9)\n",
+    "\n",
+    "        base_points = []\n",
+    "        dots = VGroup()\n",
+    "        for y in y_vals:\n",
+    "            for z in z_vals:\n",
+    "                p = np.array([-5.0, y, z])\n",
+    "                base_points.append(p)\n",
+    "                dots.add(Dot3D(p, radius=0.06))\n",
+    "\n",
+    "        def update_sheet(mob):\n",
+    "            tt = t.get_value()\n",
+    "            disp = A_sheet * np.sin(omega * tt)\n",
+    "            for d, p0 in zip(mob, base_points):\n",
+    "                d.move_to(p0 + np.array([0.0, 0.0, disp]))\n",
+    "\n",
+    "        dots.add_updater(update_sheet)\n",
+    "\n",
+    "        # ---------- plane wave vectors: E || z, k || x ----------\n",
+    "        x_min, x_max = -4.6, 10.0\n",
+    "        xs = np.linspace(x_min, x_max, 18)     # iterate light\n",
+    "        ys = np.linspace(-2.2, 2.2, 5)         # spread across the sheet direction\n",
+    "\n",
+    "        arrow_points = [np.array([x, y, 0.0]) for y in ys for x in xs]\n",
+    "        arrows = VGroup()\n",
+    "\n",
+    "        # display knobs\n",
+    "        min_len = 0.30\n",
+    "        max_len = 1.00\n",
+    "        tip_len = 0.18\n",
+    "\n",
+    "        def Ez(x, tt):\n",
+    "            return A_E * np.sin(k*x - omega*tt)\n",
+    "\n",
+    "        for p in arrow_points:\n",
+    "            arr = Arrow(\n",
+    "                start=p,\n",
+    "                end=p + np.array([0.0, 0.0, min_len]),\n",
+    "                stroke_width=3,\n",
+    "                tip_length=tip_len,\n",
+    "                max_tip_length_to_length_ratio=0.9,\n",
+    "            )\n",
+    "            arr.set_opacity(0.0)\n",
+    "            arrows.add(arr)\n",
+    "\n",
+    "        def update_arrows(mob):\n",
+    "            tt = t.get_value()\n",
+    "            for arr, p in zip(mob, arrow_points):\n",
+    "                ez = Ez(p[0], tt)\n",
+    "                mag = abs(ez)\n",
+    "\n",
+    "                if mag < 1e-3:\n",
+    "                    arr.set_opacity(0.0)\n",
+    "                    continue\n",
+    "\n",
+    "                vhat = np.array([0.0, 0.0, 1.0]) if ez >= 0 else np.array([0.0, 0.0, -1.0])\n",
+    "                disp_len = min_len + (max_len - min_len) * min(1.0, mag)\n",
+    "                end = p + disp_len * vhat\n",
+    "\n",
+    "                arr.put_start_and_end_on(p, end)\n",
+    "                arr.set_opacity(0.15 + 0.85 * min(1.0, mag))\n",
+    "\n",
+    "        arrows.add_updater(update_arrows)\n",
+    "\n",
+    "        axes = ThreeDAxes(\n",
+    "            x_range=[-1, 11, 1],\n",
+    "            y_range=[-3, 3, 1],\n",
+    "            z_range=[-3, 3, 1],\n",
+    "        ).set_stroke(opacity=0.10)\n",
+    "\n",
+    "        self.add(axes, dots, arrows, test_dot)\n",
+    "        self.play(t.animate.set_value(6.0), run_time=6.0, rate_func=linear)\n",
+    "\n",
+    "        dots.clear_updaters()\n",
+    "        arrows.clear_updaters()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83769b01-f843-41f3-bd08-2214f3e79139",
    "metadata": {},
    "outputs": [],
    "source": []
