prepping 260218 and renaming some manim generation scripts and making a worksheet for homework

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,6 +7,14 @@
    "source": [
     "# Spring 2026 Daily Log\n",
     "\n",
+    "## day 16 | 260218 W\n",
+    "\n",
+    "\n",
+    "\n",
+    "## day 15 | 260216 M\n",
+    "\n",
+    "We are now taking a closer look at the oscillations of charges in a very thin dielectric. \n",
+    "\n",
     "## day 14 | 260213 F\n",
     "\n",
     "We want to look at the origin of light and see how that affects when light enters a material. So, what is light?\n",
