--- a/worksheets/worksheet-preamble.tex
+++ b/worksheets/worksheet-preamble.tex
@@ -77,7 +77,7 @@
 
 \newcommand{\university}{Samford University}
 \newcommand{\faculty}{Department of Physics}
-\newcommand{\class}{General Physics 2}
+\newcommand{\class}{Optics - PHYS340}
 \newcommand{\examnum}{Worksheet}
 \newcommand{\content}{Example Content}
 \newcommand{\examdate}{\today}
@@ -104,7 +104,7 @@
 
 
 %%%%%%%%%%% HEADER / FOOTER %%%%%%%%%%%
-\rhead{\textsc{\university\ -- \week}}
+\rhead{\textsc{\university}}
 \chead{\textsc{}}
 \lhead{\textsc{\class}}
 \rfoot{\textsc{\thepage}}
