--- a/README.ipynb
+++ b/README.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## day 16 | 260218 W\n",
     "\n",
-    "\n",
+    "We need to prepare for an exam. So here is a homework/exam preview. \n",
     "\n",
     "## day 15 | 260216 M\n",
     "\n",
