getting the exam homework sheet ready

--- a/worksheets/homework02.tex
+++ b/worksheets/homework02.tex
@@ -1,12 +1,12 @@
 \documentclass[letterpaper,12pt]{article}
 
 \input{worksheet-preamble}
-\renewcommand{\week}{Week 13}
+%\renewcommand{\week}{Week 13}
 
 \begin{document}
 
 \begin{enumerate}
-\setlength\itemsep{2 in}
+\setlength\itemsep{3.5 in}
 
 \item 
 Express the wave function for one-dimensional harmonic waves in terms of the following parameters:
@@ -17,7 +17,7 @@ Express the wave function for one-dimensional harmonic waves in terms of the fol
 \end{itemize}
 
 \item Consider the plane electromagnetic wave in vacuum (in SI units)
-given by the expressions: $E_x = 0$, $E_y = 4 \cos [2p * 10^{14} (t - x/c) + p/2]$, and $E_z = 0$
+given by the expressions: \\$E_x = 0$ \\$E_y = 4 \cos [2p * 10^{14} (t - x/c) + p/2]$\\ $E_z = 0$
 \begin{itemize}
 	\item Calculate the frequency, wavelength, direction of motion, amplitude, initial phase angle, and polarization of the wave.
 	\item Write an expression for the magnetic flux density.
@@ -35,18 +35,15 @@ harmonic wave traveling in the $+z$-direction. The wave is linearly polarized wi
 \end{itemize}
 
 \item 
-Consider a linearly polarized plane electromagnetic wave trav-
-elling in the + x-direction in free space having as its plane of vibration
-the xy-plane. Given that its frequency is 5 MHz and its amplitude is
-E0 = 0.05 V>m,
-(a) 
-(b) 
-(c) 
+Consider a linearly polarized plane electromagnetic wave traveling in the $+x$-direction in free space having as its plane of vibration the $xy$-plane. Given that its frequency is \SI{5}{\mega\hertz} and its amplitude is $E_0 = \SI{0.05}{V/m}$
 \begin{itemize}
 	\item Find the period and wavelength of the wave.
 	\item Write an expression for $E(t)$ and $B(t)$.
 	\item Find the flux density, $<S>$, of the wave.
 \end{itemize}
+
+\item 
+A light wave travels from point A to point B in vacuum. Suppose we introduce into its path a flat glass plate ($n = 1.50$) of thickness $L = \SI{1.00}{mm}$. If the vacuum wavelength is \SI{500}{nm}, how many waves span the space from A to B with and without the glass in place? What phase shift is introduced with the insertion of the plate?
 
 \end{enumerate}
 
