--- a/README.ipynb
+++ b/README.ipynb
@@ -7,13 +7,19 @@
    "source": [
     "# Spring 2026 Daily Log\n",
     "\n",
+    "## day 17 | 260220 F\n",
+    "\n",
+    "We are continuing to look at the index of refraction. This time we are going to make things more realistic by look at the index of refraction of a thicker dielectric material. \n",
+    "\n",
     "## day 16 | 260218 W\n",
     "\n",
-    "We need to prepare for an exam. So here is a homework/exam preview. \n",
+    "We need to prepare for an exam. There is a homework review sheet posted. \n",
+    "\n",
+    "In class we finished Feynman's derivation of the index of refraction in very thin materials. \n",
     "\n",
     "## day 15 | 260216 M\n",
     "\n",
-    "We are now taking a closer look at the oscillations of charges in a very thin dielectric. \n",
+    "We are now taking a closer look at the oscillations of charges in a very thin dielectric. We started with a rough assumption about the electric field after it had passed through a thin material. We have an expression for this but need something to compare it to, so we began thinking about what a charge in this dielectric experiences. This brought us to solving some differential equations! \n",
     "\n",
     "## day 14 | 260213 F\n",
     "\n",
