adding some solutions and code pages

--- a/260223-plotting-index-v-freq-in-class.ipynb
+++ b/260223-plotting-index-v-freq-in-class.ipynb
@@ -1,14 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "db98f98a-a7ca-42e5-b62e-a0b7c746164f",
+   "metadata": {},
+   "source": [
+    "# Index of Refraction\n",
+    "\n",
+    "We have had several equations for the index of refraction and I want to show them all to you and the different features and effects in each of them. \n",
+    "\n",
+    "First, we will import some things, then I'll show the first equation, then the next, and finally I'll show what happens when light hits a metal."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "dd1b49f5-ee40-4cc6-a75f-02679786b9b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f542d5f0-1157-447f-8d7e-8303eb88fd4c",
+   "metadata": {},
+   "source": [
+    "So the first equation that we had for the index of refraction was this:\n",
+    "\n",
+    "$$n = 1 + $$"
    ]
   },
   {
