260225 W and added solutions to practice questions

--- a/README.ipynb
+++ b/README.ipynb
@@ -7,9 +7,17 @@
    "source": [
     "# Spring 2026 Daily Log\n",
     "\n",
+    "## day 19 | 260225 W\n",
+    "\n",
+    "We will review some questions for the exam that is coming on Friday!\n",
+    "\n",
+    "## day 18 | 260223 M\n",
+    "\n",
+    "We will look at the index of refraction of a dense solid and talk about how this is different. We tried to get to this last time but didn't. So what is the index of refraction of a solid material. It depends on the frequency of the light that is coming into it, because it is made of tiny charges that respond in different ways to different frequencies of light.\n",
+    "\n",
     "## day 17 | 260220 F\n",
     "\n",
-    "We are continuing to look at the index of refraction. This time we are going to make things more realistic by look at the index of refraction of a thicker dielectric material. \n",
+    "We are continuing to look at the index of refraction. This time we are going to make things more realistic by look at the index of refraction of a thicker dielectric material. First we are going to talk through the **polarization of a material** and explain exactly what that means and the effect that may have of the index of refraction. \n",
     "\n",
     "## day 16 | 260218 W\n",
     "\n",
