fixing latex problem in README

--- a/README.ipynb
+++ b/README.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "One last consequence of this is that since the speed of light in matter is slower, a question that arises is, \"Does the wavelength or the frequency get smaller or both?\" The answer is the wavelength gets smaller, not the frequency. So the wavelength in a material would be related to the wavelength in vacuum like this:\n",
     "\n",
-    "$$\\lambda = \\frac{\\lambda_{\\mathrm{vac}}{n}$$\n",
+    "$$\\lambda = \\frac{\\lambda_{\\mathrm{vac}}}{n}$$\n",
     "\n",
     "Snell's Law is another law that relates the angle of light as it goes from one material into another material. This light acts like a tank as it is crossing this boundary and changes direction slightly as a result of the speed being different in the two materials. Snell's Law looks like:\n",
     "\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1ab8f962-9c9a-4ef4-b261-7cd1078ae70b",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook README.ipynb to markdown\n",
-      "[NbConvertApp] Writing 5093 bytes to README.md\n"
+      "[NbConvertApp] Writing 9642 bytes to README.md\n"
      ]
     }
    ],
