--- a/260223-plotting-index-v-freq-in-class.ipynb
+++ b/260223-plotting-index-v-freq-in-class.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "So the first equation that we had for the index of refraction was this:\n",
     "\n",
-    "$$n = 1 + \\frac{N*q_e^2}{2 \\epsilon_0 m_e (\\omega_0^2 - \\omega^2)}$$\n",
+    "$$n = 1 + \\frac{N q_e^2}{2 \\epsilon_0 m_e (\\omega_0^2 - \\omega^2)}$$\n",
     "\n",
     "For convenience, I'll replace \n",
     "\n",
@@ -175,8 +175,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c003496b-e76e-4dda-8fa4-8f77306a25c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook 260223-plotting-index-v-freq-in-class.ipynb to pdf\n",
+      "[NbConvertApp] Support files will be in test_files/\n",
+      "[NbConvertApp] Making directory ./test_files\n",
+      "[NbConvertApp] Writing 27622 bytes to notebook.tex\n",
+      "[NbConvertApp] Building PDF\n",
+      "[NbConvertApp] Running xelatex 3 times: ['xelatex', 'notebook.tex', '-quiet']\n",
+      "[NbConvertApp] Running bibtex 1 time: ['bibtex', 'notebook']\n",
+      "[NbConvertApp] WARNING | bibtex had problems, most likely because there were no citations\n",
+      "[NbConvertApp] PDF successfully created\n",
+      "[NbConvertApp] Writing 80911 bytes to test.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --output-dir='.' --output=\"test.pdf\" --to pdf --TemplateExporter.exclude_input=False 260223-plotting-index-v-freq-in-class.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d21fa925-59d3-48a2-8cfc-81f9d0ce0a2e",
    "metadata": {},
    "outputs": [],
    "source": []
